fixed: align image only on mobile

--- a/js/app/restaurant/header.scss
+++ b/js/app/restaurant/header.scss
@@ -24,11 +24,12 @@ $orig-image-height: 270px;
 .restaurant-info {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   @media (min-width: $screen-md-min) {
     padding-top: 1.5rem;
     flex-direction: row;
-    align-items: center;
+    align-items: unset;
   }
 
   .restaurant-details {
@@ -50,7 +51,6 @@ $orig-image-height: 270px;
 
   .restaurant-image {
     position: relative;
-    align-self: center;
     margin-bottom: 1rem;
 
     @media (min-width: $screen-md-min) {
